--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node --loader ts-node/esm app.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,15 +15,29 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
+    "@types/nodemailer": "^6.4.15",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14",
+    "nodemailer-express-handlebars": "^6.1.2",
     "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
+    "nodemon": "^3.1.4",
     "prisma": "^5.16.1"
   }
 }
